# ClipBall

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  剪贴板历史记录工具.html
docs/: DEVELOPMENT.md  LIGHTWEIGHT_DESIGN.md  PRD.md  ROADMAP.md  SDD.md  TAURI_MIGRATION.md
scripts/: check.js  generate-icons.js  package-win.js  start.js
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  history_store.rs  main.rs  settings_store.rs  window.rs
src/main/: main.js
src/preload/: preload.js
src/renderer/: app.js  index.html  styles.css
